[workspace]
    members = [
        "hello_world",
        "main",
        "ownership",
        "variables",
        "functions",
        "structs",
        "enums",
        "collections",
        "iters",
        "optionals",
        "error_handling",
        "lifetimes"
        ]

    resolver = "3"
