[workspace]
    members = [
        "hello_world",
        "main",
        "ownership",
        "variables",
        "functions",
        "structs",
        "enums",
        "collections",
        "iters",
        "optionals",
        "error_handling",
        "lifetimes",
        "traits",
        "pointers",
        "generics"
        ]

    resolver = "3"
