[package]
    name = "main"
    version = "0.1.0"
    edition = "2024"

[dependencies]
    hello_world = { path = "../hello_world" }
    variables = { path = "../variables" }
    ownership = { path = "../ownership" }
    functions = { path = "../functions" }
    structs = { path = "../structs" }
    enums = { path = "../enums" }
    collections = { path = "../collections"}
    iters = { path = "../iters" }
    optionals = { path = "../optionals" }
    error_handling = { path = "../error_handling" }
    lifetimes = { path = "../lifetimes" }
    traits = { path = "../traits" }
    pointers = { path = "../pointers" }
    generics = { path = "../generics" }
    async_rust = { path = "../async_rust" }
